fix_typo_in_many_things

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
         </div>
     </nav>
-    <div class="jumbotron" style="background-image: url('/img/jumbotron_home.jpg');">
+    <div class="jumbotron">
         <div class="container">
             <h1 class="display-4 font-weight-bold align-middle">AKEWWW</h1>
             <p class="lead"></p>
